fixed public server spacing

--- a/addons/twoColumnServer.css
+++ b/addons/twoColumnServer.css
@@ -60,7 +60,7 @@
     top: 0;
     left: 0;
     margin-right: 50px;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 #bd-pub-li #bd-pub-button {
